# tutor-assistant

./: .gitignore  .graphifyignore  Makefile  README.md  graph.json  pyproject.toml
.agent/: AGENT.md  Makefile.agent  agentkit.toml  installation.json
.gigaide/: gigaide.properties
automation/: chatgpt-work-prompt.md
config/: app.example.yaml  app.yaml  students.example.yaml  students.yaml
docs/: windows-content-checklist.md
schemas/: job-status.schema.json  lesson.schema.json
scripts/: bootstrap.py  check_job.py  clean.py  make_help.py  pr13_patch_gui.py  pr13_patch_service.py
tests/: test_atomic_json.py  test_audio_quality.py  test_audio_queue.py  test_audit_regressions.py  test_background_coordination.py  test_background_task_coordinator.py  test_config.py  test_content_backup.py  test_content_browser.py  test_content_coordination.py  test_content_editing.py  test_content_hardening.py  test_content_import.py  test_content_integrity_cache.py  test_content_maintenance.py  test_content_maintenance_phases.py  test_content_pipeline_projection.py  test_content_trash.py  test_content_write_consistency.py  test_crm.py  test_diagnostics.py  test_domain.py  test_job_status.py  test_latex_compiler.py  test_latex_remote.py  test_latex_reservation.py  test_latex_validator.py  test_loopback.py  test_parallel_review.py  test_pipeline_recovery.py  test_playback.py  test_publisher_pr.py  test_quick_start.py  test_recording_recovery.py  test_store.py  test_student_content.py  test_student_content_gui.py  test_support_bundle.py  test_transcription.py  (+2 more)
(+131 files in other folders)
